--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -1,4 +1,13 @@
 .row
-  .medium-12  
-    %h1
-      Home page
+  .medium-12
+    %h1 Quiniela  
+    %table
+      %tr
+        %th Nombre
+        %th Fecha Inicio
+        %th Fecha Fin
+        %th Costo de Entrada
+      %td= @quiniela.name
+      %td= @quiniela.start_at
+      %td= @quiniela.end_at
+      %td= @quiniela.cost
