--- a/app/assets/stylesheets/layout.scss.erb
+++ b/app/assets/stylesheets/layout.scss.erb
@@ -10,3 +10,10 @@ footer {
   height:50px;
   background-color: #404040;
 }
+
+.header-container {
+  height: 50px;
+  padding: 15px;
+  text-align: center;
+  background-color: #F0F0F0;
+}
