--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -1,12 +1,12 @@
 .row
   .medium-12
-    %h1 Quiniela  
+    %h1= Predictor.model_name.human(count: 2)
     %table
       %tr
-        %th Nombre
-        %th Fecha Inicio
-        %th Fecha Fin
-        %th Costo de Entrada
+        %th= Predictor.human_attribute_name(:name)
+        %th= Predictor.human_attribute_name(:start_at)
+        %th= Predictor.human_attribute_name(:end_at)
+        %th= Predictor.human_attribute_name(:cost)
       %td= @quiniela.name
       %td= @quiniela.start_at
       %td= @quiniela.end_at
