--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,7 +5,7 @@
         = link_to 'Home', root_path
     .medium-4.columns
       .header-container
-        algo
+        = link_to 'Registrarse', new_user_session_path
     .medium-4.columns
       .header-container
         .pull-right
