--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,12 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %></div>
+  
+  <div><%= f.label :username %><br />
+  <%= f.text_field :username, autofocus: true %></div>
+
+  <div><%= f.label :role %><br />
+  <%= f.text_field :role, autofocus: true %></div>
 
   <div><%= f.label :cellphone %><br />
   <%= f.text_field :cellphone, autofocus: true %></div>
