--- a/app/views/admin/quinielas/_form.html.haml
+++ b/app/views/admin/quinielas/_form.html.haml
@@ -11,7 +11,7 @@
         = f.label :end_at
         = f.date_field :end_at
       %hr
-      %h2 Games
+      %h2= Game.model_name.human(count: 2)
       #games
         = f.fields_for :games do |game|
           = render 'game_fields', :f => game
