--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -10,9 +10,8 @@
   - @teams.each do |team|
     %tr
       %td= team.name
-      %td= link_to t('links.show'), team
-      %td= link_to t('links.edit'), edit_team_path(team)
-      %td= link_to t('links.destroy'), team_path(team), method: :delete, data: { confirm: t('buttons.confirm') } 
-
+      %td= link_to t('links.show'), [:admin, team]
+      %td= link_to t('links.edit'), edit_admin_team_path(team)
+      %td= link_to t('links.destroy'), admin_team_path(team), method: :delete, data: { confirm: t('buttons.confirm') } 
 %br
 = link_to t('links.model.new', model: Team.model_name.human ), new_admin_team_path
