--- a/app/views/admin/quinielas/_form.html.haml
+++ b/app/views/admin/quinielas/_form.html.haml
@@ -1,6 +1,6 @@
 .row
   .large-8.columns
-    = form_for @quiniela do |f|
+    = form_for [:admin, @quiniela] do |f|
       .field
         = f.label :name
         = f.text_field :name
