--- a/app/views/quinielas/edit.html.haml
+++ b/app/views/quinielas/edit.html.haml
@@ -1,4 +1,5 @@
 %h1= Quiniela.model_name.human
+
 %p
   %b= Quiniela.human_attribute_name(:name)
   = @quiniela.name
@@ -13,23 +14,5 @@
   = @quiniela.cost
 
 %h1= Game.model_name.human(count: 2)
-  
-%table
-  %tr
-    %th Local
-    %th
-    %th Visitante
-  - @quiniela.games.each do |game|
-    %tr
-      %td= game.local
-      %td= 'VS'
-      %td= game.visitor
-      %br
-%br
 
-%h1= t('app.registered_users')
-- @quiniela.users.each do |user|
-  = user.username
-  %br
-
-= link_to t('links.back'), root_path
+%h1= t('app.sign_up')
