--- a/app/views/quinielas/edit.html.haml
+++ b/app/views/quinielas/edit.html.haml
@@ -16,3 +16,9 @@
 %h1= Game.model_name.human(count: 2)
 
 %h1= t('app.sign_up')
+
+= form_for @quiniela do |f|
+  .fields
+    = f.collection_check_boxes(:user_ids, User.all, :id, :username)
+  .actions
+    = f.submit t('links.save')
