Modified quiniela form to accept games results

--- a/app/views/admin/quinielas/_game_fields.html.haml
+++ b/app/views/admin/quinielas/_game_fields.html.haml
@@ -5,4 +5,7 @@
   .field
     = f.label :visitor
     = f.collection_select(:visitor, Team.all, :name, :name)
+  .field
+    = f.label :result
+    = f.select(:result, options_for_select([:nil, :empate, :local, :visitante]))
   = link_to_remove_association t('app.remove_game'), f
