--- a/app/views/admin/quinielas/show.html.haml
+++ b/app/views/admin/quinielas/show.html.haml
@@ -17,14 +17,16 @@
   
 %table
   %tr
-    %th Local
+    %th= Game.human_attribute_name(:local)
     %th
-    %th Visitante
+    %th= Game.human_attribute_name(:visitor)
+    %th= Game.human_attribute_name(:result)
   - @quiniela.games.each do |game|
     %tr
       %td= game.local
       %td= 'VS'
       %td= game.visitor
+      %td= game.result
       %br
 
 %h1= t('app.registered_users')
