--- a/app/views/quinielas/show.html.haml
+++ b/app/views/quinielas/show.html.haml
@@ -16,16 +16,17 @@
   
 %table
   %tr
-    %th Local
+    %th= Game.human_attribute_name(:local)
     %th
-    %th Visitante
+    %th= Game.human_attribute_name(:visitor)
+    %th= Game.human_attribute_name(:result)
   - @quiniela.games.each do |game|
     %tr
       %td= game.local
       %td= 'VS'
       %td= game.visitor
+      %td= game.result
       %br
-%br
 
 %h1= t('app.registered_users')
 - @quiniela.users.each do |user|
