--- a/app/views/quinielas/index.html.haml
+++ b/app/views/quinielas/index.html.haml
@@ -16,6 +16,6 @@
       %td= quiniela.end_at
       %td= quiniela.cost
       %td= link_to t('links.show'), quiniela
-      %td= link_to t('app.sign_up'), edit_quiniela_path(quiniela)
+      %td= link_to t('app.sign_up'), quiniela_suscribe_path(quiniela) ,method: :post
 
 = link_to t('links.back'), root_path
