--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,5 +5,6 @@
         -if current_user.present?
           = link_to Quiniela.model_name.human(count: 2), quinielas_path
           = link_to current_user.username, destroy_user_session_path , method: :delete
+          = link_to t('app.choices'), new_choice_path
         -else
           = link_to t('app.register'), new_user_session_path
