--- a/app/assets/stylesheets/layout.scss.erb
+++ b/app/assets/stylesheets/layout.scss.erb
@@ -1,8 +1,3 @@
-header {
-  height: 50px;
-  background-color: #404040;
-}
-
 footer {
   position:absolute;
   bottom:0;
@@ -11,9 +6,9 @@ footer {
   background-color: #404040;
 }
 
-.header-container {
-  height: 50px;
-  padding: 15px;
-  text-align: center;
-  font-weight: bold;
+.header-text{
+  padding: 0 15px;
+  line-height: 45px;
+  color: white;
+  font-size: 0.8125rem
 }
