--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -10,4 +10,5 @@
     = f.label :name
     = f.text_field :name
   .actions
-    = f.submit t('links.save')
+    .button.radius.round
+      = f.submit t('links.save')
