--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -1,11 +1,11 @@
 %h1= Team.model_name.human(count: 2)
-
+%hr
 %table
   %tr
     %th= Team.human_attribute_name(:name)
-    %th
-    %th
-    %th
+    %th= t('links.show')
+    %th= t('links.edit')
+    %th= t('links.destroy')
 
   - @teams.each do |team|
     %tr
@@ -14,4 +14,6 @@
       %td= link_to t('links.edit'), edit_admin_team_path(team)
       %td= link_to t('links.destroy'), admin_team_path(team), method: :delete, data: { confirm: t('buttons.confirm') } 
 %br
-= link_to t('links.model.new', model: Team.model_name.human ), new_admin_team_path
+%hr
+.button.radius.round
+  = link_to t('links.model.new', model: Team.model_name.human ), new_admin_team_path
