--- a/app/views/admin/teams/new.html.haml
+++ b/app/views/admin/teams/new.html.haml
@@ -2,4 +2,5 @@
 
 = render 'form'
 
-= link_to t('links.back'), admin_teams_path
+.button.radius.round
+  = link_to t('links.back'), admin_teams_path
