--- a/app/views/admin/quinielas/_form.html.haml
+++ b/app/views/admin/quinielas/_form.html.haml
@@ -1,27 +1,31 @@
-.row
-  .large-8.columns
-    = form_for [:admin, @quiniela] do |f|
-      .field
+= form_for [:admin, @quiniela] do |f|
+  .row
+    %fieldset
+      %legend
+        = t('app.quiniela_info')
+      .large-3.columns
         = f.label :name
         = f.text_field :name
-      .field
+      .large-3.columns
         = f.label :start_at
         = f.date_field :start_at
-      .field
+      .large-3.columns
         = f.label :end_at
         = f.date_field :end_at
-      %hr
-      %h2= Game.model_name.human(count: 2)
-      #games
-        = f.fields_for :games do |game|
-          = render 'game_fields', f: game
-        .links
-          = link_to_add_association t('app.add_game'), f, :games
-      %hr
-      .field
+      .large-3.columns
         = f.label :cost
         = f.number_field :cost
-      .fields
-        = f.collection_check_boxes(:user_ids, User.all, :id, :username)
-      .actions
-        = f.submit t('links.save')
+  %hr
+  %h2= Game.model_name.human(count: 2)
+  #games
+    .links
+      .button.radius.round
+        = link_to_add_association t('app.add_game'), f, :games
+    = f.fields_for :games do |game|
+      = render 'game_fields', f: game
+  %hr
+  -#.field
+  -#.fields
+  -#  = f.collection_check_boxes(:user_ids, User.all, :id, :email)
+  .button.radius.round
+    = f.submit t('links.save')
