--- a/app/views/admin/quinielas/_game_fields.html.haml
+++ b/app/views/admin/quinielas/_game_fields.html.haml
@@ -1,11 +1,16 @@
 .nested-fields
-  .field
-    = f.label :local_id
-    = f.collection_select(:local_id, Team.all, :id, :name)
-  .field
-    = f.label :visitor_id
-    = f.collection_select(:visitor_id, Team.all, :id, :name)
-  .field
-    = f.label :result
-    = f.select :result, enum_option_pairs(Game, :result)
-  = link_to_remove_association t('app.remove_game'), f
+  .row
+    %fieldset
+      %legend
+        = t('app.games_info')
+      .large-4.columns
+        = f.label :local_id
+        = f.collection_select(:local_id, Team.all, :id, :name)
+      .large-4.columns
+        = f.label :visitor_id
+        = f.collection_select(:visitor_id, Team.all, :id, :name)
+      .large-4.columns
+        = f.label :result
+        = f.select :result, enum_option_pairs(Game, :result)
+  .button.radius.round
+    = link_to_remove_association t('app.remove_game'), f
