--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -11,7 +11,7 @@
             = link_to Quiniela.model_name.human(count: 2), quinielas_path
           %li.divider
           %li.has-dropdown.header-text
-            = current_user.username
+            = current_user.email
             %ul.dropdown
               %li.active
                 = link_to t('app.log_out'), destroy_user_session_path , method: :delete
