--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -10,5 +10,5 @@
     = f.label :name
     = f.text_field :name
   .actions
-    .button.radius.round
-      = f.submit t('links.save')
+    .button-wrapper
+      = f.submit t('links.save'), class: 'button radius round'
