--- a/app/views/admin/teams/show.html.haml
+++ b/app/views/admin/teams/show.html.haml
@@ -1,9 +1,11 @@
 %h1= Team.model_name.human
-
+%hr
 %p
   %b= Team.human_attribute_name(:name)
   = @team.name
-  
-= link_to t('links.edit'), edit_admin_team_path(@team)
-\|
-= link_to t('links.back'), admin_teams_path
+%hr
+.button.radius.round  
+  = link_to t('links.edit'), edit_admin_team_path(@team)
+
+.button.radius.round
+  = link_to t('links.back'), admin_teams_path
