--- a/app/views/choices/_form.html.haml
+++ b/app/views/choices/_form.html.haml
@@ -9,4 +9,5 @@
     = f.label :result
     = f.select :result, enum_option_pairs(Game, :result)
   .actions
-    = f.submit t('links.save')
+    .button-wrapper
+      = f.submit t('links.save'), class: 'button radius round'
