--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,9 @@
     %ul.title-area
       %li.name
         %h1
-          = link_to t('app.name'), 'http://syesoftware.com'
+          = link_to 'http://syesoftware.com' do
+            -#= image_tag 'logo.png'
+            = t('app.name')
     %section.top-bar-section
       %ul.right
         -if current_user.present?
