--- a/app/views/shared/admin/_header.html.haml
+++ b/app/views/shared/admin/_header.html.haml
@@ -4,8 +4,7 @@
       %li.name
         %h1
           = link_to 'http://syesoftware.com' do
-            -#= image_tag 'logo.png'
-            = t('app.name')
+            = image_tag 'logo.png'
     %section.top-bar-section
       %ul.left
         %li.active
