--- a/app/views/admin/teams/edit.html.haml
+++ b/app/views/admin/teams/edit.html.haml
@@ -1,7 +1,7 @@
 %h1= Team.model_name.human
 
 = render 'form'
-
-= link_to t('links.show'), [:admin, @team]
-\|
-= link_to t('links.back'), admin_teams_path
+.button.radius.round
+  = link_to t('links.show'), [:admin, @team]
+.button.radius.round
+  = link_to t('links.back'), admin_teams_path
