--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,16 +3,17 @@
     %ul.title-area
       %li.name
         %h1
-          = link_to 'http://syesoftware.com' do
-            = image_tag 'logo.png'
+          = link_to t('app.name'), '#'       
     %section.top-bar-section
       %ul.left
-        %li.active
+        %li.divider
+        %li
           = link_to t('app.home'), root_path
+        %li.divider
+        %li
+          = link_to Quiniela.model_name.human(count: 2), quinielas_path
       %ul.right
         -if current_user.present?
-          %li
-            = link_to Quiniela.model_name.human(count: 2), quinielas_path
           %li.divider
           %li.has-dropdown.header-text
             = current_user.email
