Work in user dashboard

--- a/app/assets/stylesheets/layout.scss.erb
+++ b/app/assets/stylesheets/layout.scss.erb
@@ -14,3 +14,11 @@
   position: relative;
   left: 45%;
 }
+
+.wrapper-user-quinielas {
+  width: 100%;
+}
+
+.wrapper-current-quinielas {
+  width: 100%
+}
