--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,16 +2,13 @@
   %nav.top-bar{"data-topbar" => "", :role => "navigation"}
     %ul.title-area
       %li.name
-        %h1
-          = link_to t('app.name'), '#'       
+        %h1= link_to t('app.name'), '#'
     %section.top-bar-section
       %ul.left
         %li.divider
         %li
           = link_to t('app.home'), root_path
         %li.divider
-        %li
-          = link_to Quiniela.model_name.human(count: 2), quinielas_path
       %ul.right
         -if current_user.present?
           %li.divider
