--- a/app/views/shared/admin/_header.html.haml
+++ b/app/views/shared/admin/_header.html.haml
@@ -2,12 +2,11 @@
   %nav.top-bar{"data-topbar" => "", :role => "navigation"}
     %ul.title-area
       %li.name
-        %h1
-          = link_to 'http://syesoftware.com' do
-            = image_tag 'logo.png'
+        %h1= link_to t('app.name'), '#'
     %section.top-bar-section
       %ul.left
-        %li.active
+        %li.divider
+        %li
           = link_to t('app.home'), root_path
       %ul.right
         -if current_user.present?
