Changes to dashboard

--- a/app/assets/stylesheets/layout.scss.erb
+++ b/app/assets/stylesheets/layout.scss.erb
@@ -15,10 +15,6 @@
   left: 45%;
 }
 
-.wrapper-user-quinielas {
-  width: 100%;
-}
-
-.wrapper-current-quinielas {
-  width: 100%
+.quiniela-table {
+  width: 100%; 
 }
