--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -1,6 +1,6 @@
 %h1= Team.model_name.human(count: 2)
 %hr
-%table
+%table.quiniela-table
   %tr
     %th= Team.human_attribute_name(:name)
     %th= t('links.show')
