--- a/app/views/admin/quinielas/index.html.haml
+++ b/app/views/admin/quinielas/index.html.haml
@@ -1,6 +1,6 @@
 %h1= Quiniela.model_name.human(count: 2)
 %hr
-%table
+%table.quiniela-table
   %tr
     %th= Quiniela.human_attribute_name(:name)
     %th= Quiniela.human_attribute_name(:start_at)
