--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   %nav.top-bar{"data-topbar" => "", :role => "navigation"}
     %ul.title-area
       %li.name
-        %h1= link_to t('app.name'), '#'
+        %h1= link_to t('app.name'), root_path
     %section.top-bar-section
       %ul.left
         %li.divider
