--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-%h2= t('app.sign_up')
+%h2= t('app.register')
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
@@ -13,5 +13,5 @@
   .field
     = f.label :password_confirmation
     = f.password_field :password_confirmation, autocomplete: "off"
-  %div= f.submit t('app.sign_up') 
+  %div= f.submit t('app.register') 
 = render "devise/shared/links"
